--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "babel-plugin-syntax-object-rest-spread": "^6.3.13",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "babel-plugin-transform-es2015-classes": "^6.3.13",
     "bootstrap-sass": "git://github.com/ozone-development/bootstrap-sass",
     "console-polyfill": "^0.2.2",
     "es5-shim": "^4.0.5",
